CMA-128 : Auto generate client ID in register client API
